<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/savedCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/saveImage"
                android:layout_width="75dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/savedTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toEndOf="@+id/saveImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/seriesTitle" />

            <TextView
                android:id="@+id/savedType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/savedType"
                app:layout_constraintStart_toEndOf="@+id/saveImage"
                app:layout_constraintTop_toBottomOf="@+id/savedTitle" />

            <TextView
                android:id="@+id/savedEpisode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/savedEpisode"
                app:layout_constraintStart_toEndOf="@+id/savedType"
                app:layout_constraintTop_toBottomOf="@+id/savedTitle" />

            <TextView
                android:id="@+id/members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/members"
                app:layout_constraintStart_toEndOf="@+id/saveImage"
                app:layout_constraintTop_toBottomOf="@+id/savedType" />

            <TextView
                android:id="@+id/memTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/memTitle"
                app:layout_constraintStart_toEndOf="@+id/members"
                app:layout_constraintTop_toBottomOf="@+id/savedEpisode" />

            <TextView
                android:id="@+id/audScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@android:drawable/btn_star_big_on"
                android:text="@string/audScore"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveImage"
                app:layout_constraintTop_toBottomOf="@+id/members" />

            <TextView
                android:id="@+id/yourScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@android:drawable/btn_star_big_off"
                android:text="@string/yourScore"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/yourScoreTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="298dp" />

            <TextView
                android:id="@+id/yourScoreTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/yourScoreTitle"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>